# HelloRender

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  gdb.sh  initial_setup_ubuntu.sh  run.sh  todo  todo.txt
Lessons/: BaseExcercise.cpp  BaseExcercise.h
Lessons/1. HelloTriangle/: Ex_SimpleTriangle.h
Lessons/1. HelloTriangle/shaders/: simpleShader.vert
Lessons/2. Shaders/: Ex_2ShaderPrograms.h
Lessons/3. Textures/: Ex_Textures.cpp  Ex_Textures.h  Ex_TexturesAdditionals.cpp
Lessons/3. Textures/shaders/: shaderWithTexture.vert  shaderWithTextureReversed.frag
Lessons/4. Transforms/: Ex_Transforms.cpp
Lessons/5. CoordinateSystems/: Ex_CoordinateSystems.cpp  Ex_CoordinateSystems.h
Lessons/6. Camera/: Ex_Camera.cpp  Ex_Camera.h
Lessons/6. Camera/shaders/: shaderWithModelViewProj.vert
Lessons/7. Solar System Project/: Ex_SolarSystemProject.cpp  Ex_SolarSystemProject.h
Lessons/7. Solar System Project/shaders/: shaderForSun.vert  shaderWithLighting.frag  shaderWithLighting_ViewSpace.frag  shaderWithTexture.frag
Lessons/8. Materials/: Ex_Materials.cpp  Ex_Materials.h
Lessons/8. Materials/shaders/: shaderForLightSource.frag  shaderForLightSource.vert  shaderWithLighting.frag  shaderWithLighting.vert
Lessons/CoordinateSystems/: Ex_CoordinateSystems.cpp
Lessons/CoordinateSystems/shaders/: shaderWithModelViewProj.vert
Lessons/HelloTriangle/: Ex_SimpleTriangle.cpp  Ex_SimpleTriangle.h
Lessons/Shaders/: Ex_2ShaderPrograms.cpp  Ex_2ShaderPrograms.h  Ex_Additionals.cpp  Ex_Additionals.h
Lessons/Shaders/shaders/: colorBasedOnPosition.frag  inverted_OutPos_UniformOffset.vert  shaderWithPositionAndColor.vert  shaderWithUniformBlueColor.frag
Lessons/Textures/: Ex_Textures.cpp  Ex_Textures.h  Ex_TexturesAdditionals.cpp  Ex_TexturesAdditionals.h  todo.txt
Lessons/Textures/shaders/: shaderWithTexture.frag  shaderWithTexture.vert
Lessons/Transforms/: Ex_Transforms.cpp  Ex_Transforms.h
Lessons/Transforms/shaders/: shaderWithTexture.frag  shaderWithTransform.vert
examples/: BaseExcercise.cpp  BaseExcercise.h
examples/ArkanoidProject/: Arkanoid.cpp  Arkanoid.h
examples/ModelLoadingProject/: ModelLoading.cpp  ModelLoading.h
examples/SolarSystemProject/: Ex_SolarSystemProject.cpp  Ex_SolarSystemProject.h
libs/: CMakeLists.txt
res/blender_sources/: earth.blend  platform.blend  sun.blend
res/earth/: earth.mtl
res/low_poly_ball/: low_poly_ball.blend  low_poly_ball.mtl
res/platform/: platform.mtl
res/sun/: sun.mtl
scripts/: build_linux.sh  gdb_linux.sh  initial_setup_linux.sh  initial_setup_windows.bat  run_linux.sh
shaders/: fragShader.frag  noTexture.frag  noTexture.vert  shaderForSun.frag  shaderWithGouraudLighting.frag  shaderWithGouraudLighting.vert  shaderWithModelViewProj.vert
src/: Component.cpp  Component.h  Entity.cpp  Entity.h  Excercise.h  MeshComponent.cpp  MeshComponent.h  RenderSystem.cpp  RenderSystem.h  TextureComponent.cpp  World.cpp  World.h  camera.cpp  camera.h  camera2d.cpp  camera3d.cpp  main.cpp  mesh.cpp  mesh.h  shaderInstance.cpp  shaderInstance.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h
src/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MeshComponent.h  ModelComponent.cpp  ModelComponent.h  MovementComponent.cpp  MovementComponent.h  ShaderComponent.cpp  ShaderComponent.h  SimpleCollisionComponent.cpp  SimpleCollisionComponent.h  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
src/Entity/: Entity.cpp  Entity.h
src/Helper/: Application.cpp  Application.h  ApplicationHelper.cpp  ApplicationHelper.h  FileHelper.cpp  FileHelper.h  MeshData.cpp  MeshData.h  ShaderData.cpp  ShaderData.h  ShaderHelper.cpp  ShaderHelper.h  VertexData.h
src/Legacy/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  camera2d.cpp  camera2d.h  camera3d.cpp  camera3d.h  shaderInstance.cpp  shaderProgram.cpp
src/Lessons/HelloTriangle/: Ex_SimpleTriangle.cpp  Ex_SimpleTriangle.h
src/Lessons/Shaders/: Ex_2ShaderPrograms.cpp  Ex_2ShaderPrograms.h
src/Lessons/Shaders/shaders/: shaderThatUsesInColor.frag
src/Systems/: MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  RenderingSystem.cpp  RenderingSystem.h  ShaderSystem.cpp  ShaderSystem.h  SimpleCollisionSystem.cpp  SimpleCollisionSystem.h  StaticCameraSystem.cpp  StaticCameraSystem.h  System.h
src/Tests/: BaseTest.cpp  BaseTest.h  Test_2ShaderPrograms.cpp  Test_2ShaderPrograms.h  Test_SimpleTriangle.cpp  Test_SimpleTriangle.h
src/World/: World.cpp  World.h
